# spinapps

./: .gitignore  README.md
application-vars/: Cargo.toml  runtime-config.toml  spin.toml
application-vars/src/: lib.rs
kv/: Cargo.toml  README.md  runtime-config.toml  spin.toml
kv/src/: lib.rs
mqtt-booth-volume/: .gitignore  Makefile  README.md  spin.toml
mqtt-booth-volume/api/: package-lock.json  package.json
mqtt-booth-volume/api/src/: index.ts
mqtt-booth-volume/frontend/: index.html
mqtt-booth-volume/handle-mqtt/: Cargo.toml  migration.up.sql
mqtt-booth-volume/handle-mqtt/src/: lib.rs
mqtt-booth-volume/mqtt-message-persister/: Cargo.toml  clean-noise-log.sql
mqtt-booth-volume/mqtt-message-persister/src/: lib.rs
mqtt-booth-volume/sound-sensor/: README.md  mqttsound.ino
mqtt-booth-volume/sound-sensor/mqttsound/: arduino_secrets.h  mqttsound.ino
mqtt-booth-volume/spinkube/: app-deploy.yaml  broker.yaml  mqtt-client.yaml  runtime-config.toml  sound-device.yaml  spinapp.yaml
mqtt-booth-volume/spinkube/broker-configuration/: emqx-cluster-crd.yaml  install-broker.sh
mqtt-booth-volume/status-lookup/: package-lock.json  package.json
outbound-http/: Cargo.toml  README.md  spin.toml
outbound-http/src/: lib.rs
screen-mode/: Cargo.toml  spin.toml
screen-mode/assets/: index-complex.html  index.html
screen-mode/src/: lib.rs
simple-kv/: Cargo.toml  README.md  redis.yaml  runtime-config-k8s.toml  runtime-config-local.toml  spin.toml
simple-kv/src/: lib.rs
wasi-kv/: Cargo.toml  README.md  spin.toml
wasi-kv/src/: lib.rs
